--- a/app.css
+++ b/app.css
@@ -142,7 +142,7 @@ body {
     width: 90%;
     max-width: 800px;
     margin: 0 auto;
-    padding-bottom: 20px;
+    padding-bottom: 32rem;
 }
 
 .trial-popup {
@@ -213,7 +213,14 @@ body {
     width: 100%;
     border: 1px solid #DBDBDB;
     border-radius: 18px;
+    overflow: hidden;
+    max-height: 106px;
+    /* max-height: 3000px; */
     box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
+}
+
+.setup-guide-list-wrapper.active {
+    max-height: 2000px;
 }
 
 .setup-guide-label {
@@ -221,7 +228,7 @@ body {
     justify-content: space-between;
     cursor: pointer;
     max-height: 106px;
-    min-height: 106px;
+    /* min-height: 106px; */
     padding: 16px;
     padding-right: 10px;
     border-radius: 18px;
@@ -261,6 +268,17 @@ body {
     transform: rotateX(180deg);
 }
 
+.setup-guide-list-wrapper .setup-guide-content-container {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    transition: 0.05s ease-out;
+}
+
+.setup-guide-list-wrapper.active .setup-guide-content-container {
+    height: 150px;
+}
 
 .setup-guide-description h3 {
     color: #303030;
@@ -302,17 +320,72 @@ body {
     height: 4px;
 }
 
-.setup-guide-list-wrapper .setup-guide-content {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    overflow-y: auto;
-    transition: 0.05s ease-out;
+
+/* Setup Guide Lists  */
+
+.setup-guide-content-container {
+    margin: 0 8px 16px 8px;
 }
 
-.setup-guide-list-wrapper.active .setup-guide-content {
-    height: 150px;
+.setup-guide-content {
+    background-color: #F3F3F3;
+    border-radius: 8px;
+    padding: 8px 8px 12px 8px;
 }
+
+.label {
+    display: flex;
+    align-items: center;
+}
+
+.list-header {
+    font-size: 13px;
+    font-weight: 600;
+    margin-left: 8px;
+}
+
+.list-content {
+    margin-left: 32px;
+    padding-top: 11px;
+}
+
+.list-content p {
+    color: #616161;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 19.2px;
+}
+
+.list-content a {
+    color: #005BD3;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 500;
+    /* display: block; */
+}
+
+.list-btn {
+    background-color: #404040;
+    color: #F6F3F6;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 6px 12px;
+    margin-top: 16px;
+    border: 1.5px solid rgba(255, 255, 255, 0.20);
+    border-bottom: none;
+    border-radius: 6px;
+    outline: 0;
+    box-shadow: 0px 0px 0px 1.5px #333, 0px 1px 0px 1.5px #333, 0px 2px 0px 0px #000;
+}
+
+.list-btn:hover {
+    background-color: #2A2A2A;
+}
+
+.list-btn:focus {
+    box-shadow: 0px 0px 0px 2px #005BD3, 0px 0px 0px 3px #FFF, 0px 0px 0px 1.5px #333;
+}
+
 
 @media screen and (max-width: 640px) {
     .page-content-wrapper {
@@ -346,11 +419,12 @@ body {
 
     .setup-guide-list-wrapper {
         border-radius: 0;
+        max-height: 124px;
     }
 
     .setup-guide-label {
         max-height: 124px;
-        min-height: 124px;
+        /* min-height: 124px; */
     }
 
     .setup-guide-description p {
