--- a/app.css
+++ b/app.css
@@ -277,7 +277,8 @@ body {
 }
 
 .setup-guide-list-wrapper.active .setup-guide-content-container {
-    height: 150px;
+    /* border: 1px solid red; */
+    height: auto;
 }
 
 .setup-guide-description h3 {
@@ -295,7 +296,7 @@ body {
 .form-progress {
     display: flex;
     align-items: baseline;
-    max-width: 168px;
+    max-width: 175px;
 }
 
 .form-progress p {
@@ -316,7 +317,7 @@ body {
 .progress-bar {
     background-color: #1A1A1A;
     border-radius: 28px;
-    width: 20%;
+    width: 0%;
     height: 4px;
 }
 
@@ -328,20 +329,36 @@ body {
 }
 
 .setup-guide-content {
-    background-color: #F3F3F3;
+    background-color: #FFF;
     border-radius: 8px;
-    padding: 8px 8px 12px 8px;
+    
+    /* padding: 8px; */
+    
+    /* max-height: 141px;
+    min-height: 141px; */
+    position: relative;
+}
+
+.setup-guide-content.active {
+    background-color: #F3F3F3;
+    margin-top: 10px;
 }
 
 .label {
     display: flex;
+    position: relative;
+    width: 100%;
+    max-height: 40px;
+    padding: 16px 8px;
+    /* margin-bottom: 20px; */
+    /* max-height: 41px; */
     /* align-items: center; */
 }
 
 .checkbox-container {
     width: 24px;
     position: relative;
-    top: -2px;
+    /* top: -2px; */
     cursor: pointer;
 }
 
@@ -396,11 +413,23 @@ body {
     font-size: 13px;
     font-weight: 600;
     margin-left: 8px;
+    position: relative;
+    top: 5px;
 }
 
-.list-content {
+.list-content-wrapper {
+    display: flex;
+    justify-content: space-between;
     margin-left: 32px;
-    padding-top: 11px;
+    /* padding-top: 16px; */
+    position: relative;
+    height: 0;
+    overflow: hidden;
+}
+
+.setup-guide-content.active .list-content-wrapper {
+    height: 105px;
+    transition: 0.5s;
 }
 
 .list-content p {
