fix: set list style to none to remove bullets on lists

--- a/app.css
+++ b/app.css
@@ -326,6 +326,11 @@ body {
 
 .setup-guide-content-container {
     margin: 0 8px 16px 8px;
+    
+}
+
+.setup-guide-content-container li {
+    list-style: none;
 }
 
 .setup-guide-content {
